@@ -417,6 +417,7 @@ All (GUI):
 - Added EVT_RIBBONBAR_TAB_LEFT_DCLICK event (snowleopard).
 - Fix display of right aligned columns in wxGenericListCtrl (jl).
 - Restore text drag-and-drop in wxSTC broken by Scintilla 2 update (Jens Lody).
+- Improve wxGTK print/page setup dialog (rafravago).
 
 MSW:
 
